Overlapping Resolved

--- a/styles.css
+++ b/styles.css
@@ -395,7 +395,7 @@ nav a{
 
 .header-content h2 {
     color: #c8c6c6;
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin: 8px 0 0;
 }
 
